Fix bug where fact's superscript source wraps alone

--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@ a:hover {
 
 sup {
 	font-size: 13px;
+	white-space: nowrap;
 }
 
 sup a {
